# GTMesh-examples

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  RKMSolver.hpp  RKMSolver_omp.hpp  build_and_run.sh  heat_conduction_omp_graph.cpp  heat_conduction_omp_structure.cpp  main.cpp
Meshes/: hexa-2k.vtk  mesh3D-unstructured.fpma  simple_mesh_generator.py
src/lib/: Gradient.hpp  NumericHelpers.hpp  VectorView.hpp  VirtualGrid.hpp  optimisation.hpp
src/problems/: MeshGenerator.cpp  heat_conduction.cpp  heat_conduction_omp_graph.cpp  heat_conduction_omp_structure.cpp
src/solvers/: RKMSolver.hpp
